# qrcodegen-cmake

./: CMakeLists.txt  LICENSE  README.md
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: clang.yml  gcc.yml  linux.yml
